--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-    "name": "gmail-salesforce-extension",
-    "description": "Google Chrome extension for a custom integration of missing functionality from Lightning for Gmail.",
-    "dependencies": {
-        "jquery": "3.2.1",
-        "lodash": "4.17.4",
-        "moment": "2.18.1",
-        "select2": "4.0.3",
-        "mutation-summary": "0.1.1",
-        "uuid": "3.0.1"
-    },
-    "devDependencies": {
-        "typescript": "2.3.2",
-        "@types/jquery": "2.0.43",
-        "@types/moment": "2.13.0",
-        "@types/chrome": "0.0.46"
-    }
+  "name": "gmail-salesforce-extension",
+  "description": "Google Chrome extension for a custom integration of missing functionality from Lightning for Gmail.",
+  "scripts": {
+    "start": "concurrently \"tsc -w\" \"webpack --watch\"",
+    "webpack::watchnpm st": "webpack",
+    "tsc:w": "tsc -w"
+  },
+  "dependencies": {
+  },
+  "devDependencies": {
+    "@types/chrome": "0.0.46",
+    "@types/webpack": "2.2.15",
+    "concurrently": "3.4.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "0.11.1",
+    "html-webpack-plugin": "2.28.0",
+    "style-loader": "0.17.0",
+    "css-loader": "0.28.1",
+    "ts-loader": "^2.0.3",
+    "typescript": "^2.2.1",
+    "webpack": "2.5.1",
+    "tslint": "5.2.0",
+    "eslint": "3.19.0"
+  }
 }
