--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,23 @@
 {
     "compileOnSave": true,
     "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
         "lib": [
-            "es2016",
-            "dom"
+            "dom",
+            "es2015",
+            "es2016"
         ],
-        "target": "es5",
+        "jsx": "preserve",
+        "target": "es2016",
+        "module": "es2015",
+        "moduleResolution": "node",
+        "noImplicitAny": false,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "removeComments": false,
+        "preserveConstEnums": true,
         "sourceMap": true,
-        "module": "none",
-        "typeRoots": [
-            "node_modules/@types"
-        ]
+        "skipLibCheck": true
     },
     "exclude": [
         "node_modules"
