--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "gmail-salesforce-extension",
+  "version": "1.0.0",
   "description": "Google Chrome extension for a custom integration of missing functionality from Lightning for Gmail.",
   "scripts": {
-    "start": "concurrently \"tsc -w\" \"webpack --watch\"",
-    "webpack::watchnpm st": "webpack",
-    "tsc:w": "tsc -w"
+    "start": "concurrently \"tsc\" \"webpack-dev-server -w\""
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/chrome": "0.0.46",
     "@types/webpack": "2.2.15",
+    "clean-webpack-plugin": "^0.1.16",
     "concurrently": "3.4.0",
+    "css-loader": "0.28.1",
+    "eslint": "3.19.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "0.11.1",
     "html-webpack-plugin": "2.28.0",
+    "image-webpack-loader": "^3.3.1",
     "style-loader": "0.17.0",
-    "css-loader": "0.28.1",
     "ts-loader": "^2.0.3",
-    "typescript": "^2.2.1",
-    "webpack": "2.5.1",
     "tslint": "5.2.0",
-    "eslint": "3.19.0"
+    "typescript": "^2.2.1",
+    "webpack": "2.5.1"
   }
 }
