--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,8 +5,20 @@
 
     "description": "Extension for AtlanticBT. This extension implements missing features needed by ABT from the 'Lightning for Gmail' plugin from Salesforce.",
 
-    "browser_action": {
-        "default_icon": "images/favicon_black.png"
+    "icons": {
+        "16": "favicon_black16.png",
+        "24": "favicon_black24.png",
+        "32": "favicon_black32.png",
+        "48": "favicon_black48.png",
+        "128": "favicon_black128.png"
+    },
+    
+    "page_action": {
+        "default_icon": { // optional
+            "16": "favicon_black16.png", // optional
+            "24": "favicon_black24.png", // optional
+            "32": "favicon_black32.png" // optional
+        }
     },
 
     "author": "Edwin Beltran",
@@ -17,6 +29,6 @@
     ],
     "content_scripts": [{
         "matches": ["https://mail.google.com/*", "https://inbox.google.com/*"],
-        "js": ["js/libs/inboxsdk.js", "js/app/index.js"]
+        "js": ["main.js"]
     }]
 }
