working on adding font awesome

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         // exclude .js and .js.map files, when in a TypeScript project
         "**/*.js": { "when": "$(basename).ts"},
         "**/*.js.map": true
-    }
+    },
+    "sasslint.configFile": ".sass-lint.yml"
 }
