--- a/package.json
+++ b/package.json
@@ -17,19 +17,23 @@
   },
   "devDependencies": {
     "@types/chrome": "0.0.46",
-    "@types/webpack": "2.2.15",
-    "@types/lodash": "4.14.50",
     "@types/jquery": "2.0.43",
-    
+    "@types/lodash": "4.14.50",
+    "@types/webpack": "2.2.15",
     "clean-webpack-plugin": "0.1.16",
     "concurrently": "3.4.0",
     "css-loader": "0.28.1",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "image-webpack-loader": "3.3.1",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.5",
+    "source-map-loader": "^0.2.1",
     "style-loader": "0.17.0",
     "ts-loader": "2.0.3",
-    "typescript": "2.2.1",
-    "webpack": "2.5.1"
+    "typescript": "2.3.2",
+    "url-loader": "^0.5.8",
+    "webpack": "2.5.1",
+    "tslint": "5.2.0"
   }
 }
