--- a/src/manifest.json
+++ b/src/manifest.json
@@ -29,6 +29,7 @@
     ],
     "content_scripts": [{
         "matches": ["https://mail.google.com/*", "https://inbox.google.com/*"],
-        "js": ["main.js"]
+        "js": ["main.js"],
+        "css": ["main.css"]
     }]
 }
