--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "source-map-loader": "^0.2.1",
     "style-loader": "0.17.0",
     "ts-loader": "2.0.3",
+    "tslint": "5.2.0",
     "typescript": "2.3.2",
     "url-loader": "^0.5.8",
     "webpack": "2.5.1",
-    "tslint": "5.2.0"
+    "webpack-dev-server": "^2.4.5"
   }
 }
