--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clean-webpack-plugin": "0.1.16",
     "concurrently": "3.4.0",
     "css-loader": "0.28.1",
+    "eslint": "^3.19.0",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "image-webpack-loader": "3.3.1",
