--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "eslint": "^3.19.0",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
+    "font-awesome-sass-loader": "^2.0.1",
     "image-webpack-loader": "3.3.1",
     "node-sass": "^4.5.2",
+    "sass": "^0.5.0",
     "sass-loader": "^6.0.5",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.17.0",
