--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gmail-js": "0.6.10",
     "jquery": "3.2.1",
     "jsforce": "1.8.0",
+    "jsforce-ajax-proxy": "1.0.0",
     "lodash": "4.17.4"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@types/jquery": "2.0.43",
     "@types/lodash": "4.14.50",
     "@types/webpack": "2.2.15",
+    "@types/node": "7.0.18",
     "clean-webpack-plugin": "0.1.16",
     "concurrently": "3.4.0",
     "css-loader": "0.28.1",
