--- a/src/manifest.json
+++ b/src/manifest.json
@@ -31,10 +31,15 @@
     "offline_enabled": false,
     "permissions": [
         "https://mail.google.com/",
-        "https://inbox.google.com/"
+        "https://inbox.google.com/",
+        "https://*.salesforce.com/",
+        "https://*.force.com/"
     ],
     "content_scripts": [{
-        "matches": ["https://mail.google.com/*", "https://inbox.google.com/*"],
+        "matches": [
+            "https://mail.google.com/*",
+            "https://inbox.google.com/*"
+        ],
         "js": ["main.js"],
         "css": ["main.css"]
     }]
