--- a/src/manifest.json
+++ b/src/manifest.json
@@ -29,8 +29,13 @@
         "fonts/fontawesome-webfont.woff2"
     ],
     "author": "Edwin Beltran",
+    "background": {
+        "scripts": [
+            "js/background.js"
+        ]
+    },
     "permissions": [
-        "storage",
+        "cookies",
         "https://mail.google.com/",
         "https://inbox.google.com/",
         "https://*.salesforce.com/",
