--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,6 +10,7 @@
         "24": "images/favicon_black24.png",
         "32": "images/favicon_black32.png",
         "48": "images/favicon_black48.png",
+        "80": "images/favicon_black80.png",
         "128": "images/favicon_black128.png"
     },
 
@@ -17,7 +18,8 @@
         "default_icon": {
             "16": "images/favicon_black16.png",
             "24": "images/favicon_black24.png",
-            "32": "images/favicon_black32.png"
+            "32": "images/favicon_black32.png",
+            "80": "images/favicon_black80.png"
         },
         "default_title": "AtlanticBT Gmail Extensions"
     },
@@ -36,6 +38,7 @@
     },
     "permissions": [
         "cookies",
+        "notifications",
         "https://mail.google.com/",
         "https://inbox.google.com/",
         "https://*.salesforce.com/",
