--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "font-awesome": "4.7.0",
     "gmail-js": "0.6.10",
-    "jquery": "3.2.1",
+    "jquery": "^1.10.2",
     "jsforce": "1.8.0",
     "lodash": "4.17.4",
     "uuid": "3.0.1"
