put back the regular loading, even seems not to be working. will branch off to test the dom loading of the gmail js

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -27,8 +27,7 @@
         "fonts/fontawesome-webfont.svg",
         "fonts/fontawesome-webfont.ttf",
         "fonts/fontawesome-webfont.woff",
-        "fonts/fontawesome-webfont.woff2",
-        "js/main.js"
+        "fonts/fontawesome-webfont.woff2"
     ],
     "author": "Edwin Beltran",
     "background": {
@@ -51,10 +50,10 @@
             "https://inbox.google.com/*"
         ],
         "css": [
-            "css/content.css"
+            "css/main.css"
         ],
         "js": [
-            "js/content.js"
+            "js/main.js"
         ]
     }]
 }
