--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jquery": "^1.10.2",
     "jsforce": "1.8.0",
     "lodash": "4.17.4",
-    "uuid": "3.0.1"
+    "uuid": "3.0.1",
+    "mutation-summary": "0.1.1"
   },
   "devDependencies": {
     "@types/chrome": "0.0.46",
