--- a/src/manifest.json
+++ b/src/manifest.json
@@ -39,6 +39,7 @@
     "permissions": [
         "cookies",
         "notifications",
+        "management",
         "https://mail.google.com/",
         "https://inbox.google.com/",
         "https://*.salesforce.com/",
