--- a/src/manifest.json
+++ b/src/manifest.json
@@ -41,6 +41,8 @@
         "notifications",
         "management",
         "storage",
+        "tabs",
+        "activeTab",
         "https://mail.google.com/",
         "https://inbox.google.com/",
         "https://*.salesforce.com/",
