--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "AtlanticBT Gmail and Salesforce Extension",
-    "version": "0.0.1",
+    "version": "0.0.4",
 
     "description": "Extension for AtlanticBT. This extension implements missing features needed by ABT from the 'Lightning for Gmail' plugin from Salesforce.",
 
@@ -50,6 +50,8 @@
     "permissions": [
         "cookies",
         "notifications",
+        "management",
+        "tabs",
         "https://mail.google.com/",
         "https://inbox.google.com/",
         "https://*.salesforce.com/",
