--- a/src/manifest.json
+++ b/src/manifest.json
@@ -48,6 +48,7 @@
         "cookies",
         "notifications",
         "management",
+        "storage",
         "https://mail.google.com/",
         "https://inbox.google.com/",
         "https://*.salesforce.com/",
