--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,8 @@
 {
     "manifest_version": 2,
     "name": "AtlanticBT Gmail and Salesforce Extension",
-    "version": "0.0.9",
+    "short_name": "ABT Force",
+    "version": "0.0.10",
 
     "description": "This extension implements missing features needed by ABT from the 'Lightning for Gmail' plugin from Salesforce.",
 
@@ -64,7 +65,6 @@
         ],
         "js": [
             "js/contentScripts.js"
-        ],
-        "run_at": "document_end"
+        ]
     }]
 }
